--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello, i am Daniel Busse!
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello, i am Daniel Busse!</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
