--- a/index.html
+++ b/index.html
@@ -1,7 +1,42 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello, i am Daniel Busse!</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Portfolio of Daniel Busse">
+        <meta name="author" content="Daniel Busse">
+
+        <title>Daniel Busse | Portfolio</title>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    </head>
+    <body class="d-flex h-100 text-center text-bg-dark">
+        <header class="mb-auto">
+            <div>
+                <h3 class="float-mb-start mb-0">Daniel Busse</h3>
+                <nav class="nav nav-masthread justify-content-center float-mb-end">
+                    <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="https://danielbusse.github.io">Home</a>
+                    <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/portfolio/">Portfolio</a>
+                    <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/projects/">Projects</a>
+                    <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/contact/">Contact</a>
+                </nav>
+            </div>
+        </header>
+        <main class="px-3">
+            <h1>Hello, i am Daniel Busse!</h1>
+            <p class="lead">I am a master's student in the field of Telematics at the Technical University of Applied Sciences 
+                Wildau. I am currently looking for a master's thesis in the field of machine learning, preferably in the area of 
+                vehicle automation.</p>
+            <p class="lead">
+                <a href="https://danielbusse.github.io/portfolio/" class="btn btn-lg btn-light fw-bold border-white bg-white">Chech Portfolio</a>
+            </p>
+        </main>
+        <footer>
+            Peronal website of Daniel Busse<br>
+            © 2024 Daniel Busse
+        </footer>
+    </body>
 </html>
