--- a/index.html
+++ b/index.html
@@ -12,29 +12,31 @@
 
     </head>
     <body class="d-flex h-100 text-center text-bg-dark">
-        <header class="mb-auto">
-            <div>
-                <h3 class="float-mb-start mb-0">Daniel Busse</h3>
-                <nav class="nav nav-masthread justify-content-center float-mb-end">
-                    <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="https://danielbusse.github.io">Home</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/portfolio/">Portfolio</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/projects/">Projects</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/contact/">Contact</a>
-                </nav>
-            </div>
-        </header>
-        <main class="px-3">
-            <h1>Hello, i am Daniel Busse!</h1>
-            <p class="lead">I am a master's student in the field of Telematics at the Technical University of Applied Sciences 
-                Wildau. I am currently looking for a master's thesis in the field of machine learning, preferably in the area of 
-                vehicle automation.</p>
-            <p class="lead">
-                <a href="https://danielbusse.github.io/portfolio/" class="btn btn-lg btn-light fw-bold border-white bg-white">Chech Portfolio</a>
-            </p>
-        </main>
-        <footer>
-            Peronal website of Daniel Busse<br>
-            © 2024 Daniel Busse
-        </footer>
+        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+            <header class="mb-auto">
+                <div>
+                    <h3 class="float-mb-start mb-0">Daniel Busse</h3>
+                    <nav class="nav nav-masthread justify-content-center float-mb-end">
+                        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="https://danielbusse.github.io">Home</a>
+                        <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/portfolio/">Portfolio</a>
+                        <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/projects/">Projects</a>
+                        <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/contact/">Contact</a>
+                    </nav>
+                </div>
+            </header>
+            <main class="px-3">
+                <h1>Hello, i am Daniel Busse!</h1>
+                <p class="lead">I am a master's student in the field of Telematics at the Technical University of Applied Sciences 
+                    Wildau. I am currently looking for a master's thesis in the field of machine learning, preferably in the area of 
+                    vehicle automation.</p>
+                <p class="lead">
+                    <a href="https://danielbusse.github.io/portfolio/" class="btn btn-lg btn-light fw-bold border-white bg-white">Chech Portfolio</a>
+                </p>
+            </main>
+            <footer>
+                Peronal website of Daniel Busse<br>
+                © 2024 Daniel Busse
+            </footer>
+        </div>
     </body>
 </html>
