--- a/index.html
+++ b/index.html
@@ -7,33 +7,53 @@
         <meta name="author" content="Daniel Busse">
 
         <title>Daniel Busse | Portfolio</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <style>
+            html, body {
+                height: 100%;
+            }
+        </style>
     </head>
-    <body class="d-flex h-100 text-center text-bg-dark">
-        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-            <header class="mb-auto">
-                <div>
-                    <h3 class="float-mb-start mb-0">Daniel Busse</h3>
-                    <nav class="nav nav-masthread justify-content-center float-mb-end">
-                        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="https://danielbusse.github.io">Home</a>
-                        <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/portfolio/">Portfolio</a>
-                        <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/projects/">Projects</a>
-                        <a class="nav-link fw-bold py-1 px-0" href="https://danielbusse.github.io/contact/">Contact</a>
-                    </nav>
-                </div>
+    <body class="text-center text-bg-dark mb-auto">
+        <div class="w-100 p-3" style="height: 100%;">
+            <header class="container">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <h3 class=" mb-md-0  mb-0">Daniel Busse</h3>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-light fw-bold active" aria-current="page" href="https://danielbusse.github.io/">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="https://danielbusse.github.io/portfolio/">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="https://danielbusse.github.io/projects/">Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="https://danielbusse.github.io/contact/">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </header>
-            <main class="px-3">
-                <h1>Hello, i am Daniel Busse!</h1>
-                <p class="lead">I am a master's student in the field of Telematics at the Technical University of Applied Sciences 
-                    Wildau. I am currently looking for a master's thesis in the field of machine learning, preferably in the area of 
-                    vehicle automation.</p>
-                <p class="lead">
-                    <a href="https://danielbusse.github.io/portfolio/" class="btn btn-lg btn-light fw-bold border-white bg-white">Chech Portfolio</a>
-                </p>
+            <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
+                <div class="container d-flex flex-column">
+                    <h1>Hello, i am Daniel Busse!</h1>
+                    <p class="lead">I am a master's student in the field of Telematics at the Technical University of Applied Sciences 
+                        Wildau. I am currently looking for a master's thesis in the field of machine learning, preferably in the area of 
+                        vehicle automation.</p>
+                    <p class="lead">
+                        <a href="https://danielbusse.github.io/portfolio/" class="btn btn-lg btn-light fw-bold border-white bg-white">
+                            Check out my Portfolio
+                        </a>
+                    </p>
+                </div>
             </main>
-            <footer>
+            <footer class="mt-auto text-white-50">
                 Peronal website of Daniel Busse<br>
                 © 2024 Daniel Busse
             </footer>
