--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             }
         </style>
     </head>
-    <body class="text-center text-bg-dark mb-auto">
-        <div class="w-100 p-3" style="height: 100%;">
+    <body class="d-flex text-center text-bg-dark mb-auto">
+        <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
