changed bagground to gradient

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body class="d-flex text-center text-bg-dark mb-auto">
+    <body class="d-flex text-center text-bg-dark bg-gradient mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
                 <nav class="navbar navbar-expand-lg">
@@ -44,7 +44,7 @@
                 <div class="container d-flex flex-column">
                     <h1>404!</h1>
                     <p class="lead fw-bold">This page does not exist.</p>
-                    <p><i class="fs-sm fw-light">Or does it? Since there is a page you are looking at... Anyways, the URL you tried to enter has no content.</i></p>
+                    <p><i class="fs-sm fw-light">Or does it? Since there is a page you are looking at... Anyways, the url you tried to enter has no content.</i></p>
                     </p>
                 </div>
             </main>
