--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body class="d-flex text-center text-bg-dark mb-auto">
+    <body class="d-flex text-center text-bg-dark bg-gradient mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
                 <nav class="navbar navbar-expand-lg">
