--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Portfolio of Daniel Busse">
         <meta name="author" content="Daniel Busse">
 
-        <title>Daniel Busse | Portfolio</title>
+        <title>Daniel Busse | Projects</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
@@ -45,6 +45,26 @@
                     <h1>Projects comming soon....</h1>
                     <p class="lead">I still have to put all my past projects into a small readable format.</p>
                     </p>
+                    <div class="container col-md-6 w-50">
+                        <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary-emphsis">Robotics</strong>
+                                <h3 class="mb-0">Nibo 2 - My First Robotics Project</h3>
+                                <p class="card-text mb-auto">
+                                    This is a Project about the Nibo2 and image recognition with OpenCV
+                                </p>
+                                <a href="https://danielbusse.github.io/projects/nibo2/" 
+                                class="icon-link gab-1 icon-link-hover streched-link">Read More</a>
+                            </div>
+                            <div class="col d-none d-lg-block">
+                                <img src="https://www.nicai-systems.com/images/stories/banner/NIBO2_details_600x450.jpg" 
+                                alt="Nibo2 Robot">
+                            </div>
+                        </div>
+                        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
+                            https://www.nicai-systems.com/images/stories/banner/NIBO2_details_600x450.jpg
+                        </div>
+                    </div>
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
