updated projects listing, removed gradient background and added some quirks

--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body class="d-flex text-center text-bg-dark bg-gradient mb-auto">
+    <body class="d-flex text-center text-bg-dark mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
                 <nav class="navbar navbar-expand-lg">
@@ -42,8 +42,8 @@
             </header>
             <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1>Contact is comming soon....</h1>
-                    <p class="lead">I have to decide whether you will be able to and on how to contact me.</p>
+                    <h1>Contact is comming soon....??</h1>
+                    <p class="lead">I have to decide whether you will be able to and on how to contact me directly.</p>
                     </p>
                 </div>
             </main>
