--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body class="d-flex text-center text-bg-dark bg-gradient mb-auto">
+    <body class="d-flex text-center text-bg-dark mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
                 <nav class="navbar navbar-expand-lg">
@@ -43,7 +43,11 @@
             <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
                     <h1>Portfolio comming soon....</h1>
-                    <p class="lead">I need to format my Portfolio into compact readable format. Therefore i need to finish on <i></i>.</p>
+                    <p class="lead">
+                        I need to format my Portfolio into compact readable format. Therefore i need to finish on <i>Projects</i> first.
+                    </p>
+                    <p>
+                        But you can find my CV <a href="https://danielbusse.github.io/cv.pdf">here</a>.
                     </p>
                 </div>
             </main>
