--- a/projects/index.html
+++ b/projects/index.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body class="d-flex text-center text-bg-dark bg-gradient mb-auto">
+    <body class="d-flex text-center text-bg-dark mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
                 <nav class="navbar navbar-expand-lg">
@@ -48,21 +48,41 @@
                     <div class="container col-md-6 w-50">
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
-                                <strong class="d-inline-block mb-2 text-primary-emphsis">Robotics</strong>
-                                <h3 class="mb-0">Nibo 2 - My First Robotics Project</h3>
-                                <p class="card-text mb-auto">
+                                <strong class="d-inline-block mb-2 text-primary-emphsis">Robotics, Image Recognition</strong>
+                                <h3 class="p-2">Nibo 2 - My First Robotics Project</h3>
+                                <p class="card-text mb-4">
                                     This is a Project about the Nibo2 and image recognition with OpenCV
                                 </p>
-                                <a href="https://danielbusse.github.io/projects/nibo2/" 
-                                class="icon-link gab-1 icon-link-hover streched-link">Read More</a>
+                                <div>
+                                    <a href="https://danielbusse.github.io/projects/nibo2/" 
+                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold">
+                                        Read More
+                                    </a>
+                                </div>
                             </div>
-                            <div class="col d-none d-lg-block">
+                            <!--div class="col d-none d-lg-block">
                                 <img src="https://www.nicai-systems.com/images/stories/banner/NIBO2_details_600x450.jpg" 
                                 alt="Nibo2 Robot">
-                            </div>
+                            </div-->
                         </div>
-                        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
-                            https://www.nicai-systems.com/images/stories/banner/NIBO2_details_600x450.jpg
+                        <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary-emphsis">Robotics, Object Detection</strong>
+                                <h3 class="p-2">NaoLino - Recognizing Objects</h3>
+                                <p class="card-text mb-4">
+                                    This is a Project about the Nao humanoid robot and detection objects with a haartrainer
+                                </p>
+                                <div>
+                                    <a href="https://danielbusse.github.io/projects/nibo2/" 
+                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold">
+                                        Read More
+                                    </a>
+                                </div>
+                            </div>
+                            <!--div class="col d-none d-lg-block">
+                                <img src="https://www.nicai-systems.com/images/stories/banner/NIBO2_details_600x450.jpg" 
+                                alt="Nibo2 Robot">
+                            </div-->
                         </div>
                     </div>
                 </div>
