--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,18 +22,18 @@
             <header class="container">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <h3 class=" mb-md-0  mb-0">Daniel Busse</h3>
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
+                        <h3 class="p-2">Daniel Busse</h3>
+                        <ul class="navbar-nav border rounded">
+                            <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/">Home</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item p-1">
                                 <a class="nav-link text-light fw-bold active" aria-current="page" href="https://danielbusse.github.io/portfolio/">Portfolio</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/projects/">Projects</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/contact/">Contact</a>
                             </li>
                         </ul>
