--- a/projects/index.html
+++ b/projects/index.html
@@ -22,18 +22,18 @@
             <header class="container">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <h3 class=" mb-md-0  mb-0">Daniel Busse</h3>
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
+                        <h3 class="p-2">Daniel Busse</h3>
+                        <ul class="navbar-nav border rounded">
+                            <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/">Home</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/portfolio/">Portfolio</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item p-1">
                                 <a class="nav-link text-light fw-bold active" aria-current="page" href="https://danielbusse.github.io/projects/">Projects</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/contact/">Contact</a>
                             </li>
                         </ul>
@@ -42,16 +42,16 @@
             </header>
             <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1>Projects comming soon....</h1>
+                    <h1>Project specific sites comming soon....</h1>
                     <p class="lead">I still have to put all my past projects into a small readable format.</p>
                     </p>
                     <div class="container col-md-6 w-50">
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
-                                <strong class="d-inline-block mb-2 text-primary-emphsis">Robotics, Image Recognition</strong>
-                                <h3 class="p-2">Nibo 2 - My First Robotics Project</h3>
+                                <strong class="d-inline-block mb-2 text-primary-emphsis">ROS, Lane Detection</strong>
+                                <h3 class="p-2">Bachelor Thesis</h3>
                                 <p class="card-text mb-4">
-                                    This is a Project about the Nibo2 and image recognition with OpenCV
+                                    Lane detection with a 3D camera in a Robotic Operating System with Open Computer Vision
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/nibo2/" 
@@ -60,10 +60,6 @@
                                     </a>
                                 </div>
                             </div>
-                            <!--div class="col d-none d-lg-block">
-                                <img src="https://www.nicai-systems.com/images/stories/banner/NIBO2_details_600x450.jpg" 
-                                alt="Nibo2 Robot">
-                            </div-->
                         </div>
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
@@ -71,6 +67,21 @@
                                 <h3 class="p-2">NaoLino - Recognizing Objects</h3>
                                 <p class="card-text mb-4">
                                     This is a Project about the Nao humanoid robot and detection objects with a haartrainer
+                                </p>
+                                <div>
+                                    <a href="https://danielbusse.github.io/projects/nibo2/" 
+                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold">
+                                        Read More
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary-emphsis">Robotics, Image Recognition</strong>
+                                <h3 class="p-2">Nibo 2 - My First Robotics Project</h3>
+                                <p class="card-text mb-4">
+                                    This is a Project about the Nibo2 and image recognition with OpenCV
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/nibo2/" 
