Updated Footer, Updated Navbar, changed project-card width

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body class="d-flex text-center text-bg-dark mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
-                <nav class="navbar navbar-expand-lg">
+                <nav class="navbar navbar-expand-sm">
                     <div class="container-fluid">
                         <h3 class="p-2">Daniel Busse</h3>
                         <ul class="navbar-nav border rounded">
@@ -42,11 +42,11 @@
             </header>
             <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1>Hello, i am Daniel Busse!</h1>
-                    <p class="lead">I am a master's student in the field of Telematics at the Technical University of Applied Sciences 
+                    <h1 class="p-1 mb-4">Hello, i am Daniel Busse!</h1>
+                    <p class="lead p-1">I am a master's student in the field of Telematics at the Technical University of Applied Sciences 
                         Wildau. I am currently looking for a master's thesis in the field of machine learning, preferably in the area of 
                         vehicle automation.</p>
-                    <p class="lead">
+                    <p class="lead p-1">
                         <a href="https://danielbusse.github.io/portfolio/" class="btn btn-lg btn-light fw-bold border-white bg-white">
                             Check out my Portfolio
                         </a>
@@ -54,8 +54,10 @@
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
-                Peronal website of Daniel Busse<br>
-                © 2024 Daniel Busse
+                <p>
+                    Peronal website of Daniel Busse<br>
+                    © 2024 Daniel Busse
+                </p>
             </footer>
         </div>
     </body>
