--- a/projects/index.html
+++ b/projects/index.html
@@ -20,7 +20,7 @@
     <body class="d-flex text-center text-bg-dark mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
-                <nav class="navbar navbar-expand-lg">
+                <nav class="navbar navbar-expand-sm">
                     <div class="container-fluid">
                         <h3 class="p-2">Daniel Busse</h3>
                         <ul class="navbar-nav border rounded">
@@ -40,12 +40,12 @@
                     </div>
                 </nav>
             </header>
-            <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
+            <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
                     <h1>Project specific sites comming soon....</h1>
                     <p class="lead">I still have to put all my past projects into a small readable format.</p>
                     </p>
-                    <div class="container col-md-6 w-50">
+                    <div class="container col-md-6 w-75">
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
                                 <strong class="d-inline-block mb-2 text-primary-emphsis">ROS, Lane Detection</strong>
@@ -99,8 +99,10 @@
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
-                Peronal website of Daniel Busse<br>
-                © 2024 Daniel Busse
+                <p>
+                    Peronal website of Daniel Busse<br>
+                    © 2024 Daniel Busse
+                </p>
             </footer>
         </div>
     </body>
