--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
     <body class="d-flex text-center text-bg-dark mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
-                <nav class="navbar navbar-expand-lg">
+                <nav class="navbar navbar-expand-sm">
                     <div class="container-fluid">
                         <h3 class="p-2">Daniel Busse</h3>
                         <ul class="navbar-nav border rounded">
@@ -49,8 +49,10 @@
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
-                Peronal website of Daniel Busse<br>
-                © 2024 Daniel Busse
+                <p>
+                    Peronal website of Daniel Busse<br>
+                    © 2024 Daniel Busse
+                </p>
             </footer>
         </div>
     </body>
