modified project tags to be less attention grabbing

--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,7 @@
     </head>
     <body class="d-flex text-center text-bg-dark mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
-            <header class="container">
+            <header class="container mb-4">
                 <nav class="navbar navbar-expand-sm">
                     <div class="container-fluid">
                         <h3 class="p-2">Daniel Busse</h3>
@@ -48,7 +48,7 @@
                     <div class="container col-md-6 w-75">
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
-                                <strong class="d-inline-block mb-2 text-primary-emphsis">ROS, Lane Detection</strong>
+                                <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">ROS, Lane Detection</strong>
                                 <h3 class="p-2">Bachelor Thesis</h3>
                                 <p class="card-text mb-4">
                                     Lane detection with a 3D camera in a Robotic Operating System with Open Computer Vision
@@ -63,7 +63,7 @@
                         </div>
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
-                                <strong class="d-inline-block mb-2 text-primary-emphsis">Robotics, Object Detection</strong>
+                                <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">Robotics, Object Detection</strong>
                                 <h3 class="p-2">NaoLino - Recognizing Objects</h3>
                                 <p class="card-text mb-4">
                                     This is a Project about the Nao humanoid robot and detection objects with a haartrainer
@@ -78,7 +78,7 @@
                         </div>
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
-                                <strong class="d-inline-block mb-2 text-primary-emphsis">Robotics, Image Recognition</strong>
+                                <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">Robotics, Image Recognition</strong>
                                 <h3 class="p-2">Nibo 2 - My First Robotics Project</h3>
                                 <p class="card-text mb-4">
                                     This is a Project about the Nibo2 and image recognition with OpenCV
