changed bg to green and link colors

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body class="d-flex text-center text-bg-dark mb-auto">
+    <body class="d-flex text-center text-bg-danger mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
                 <nav class="navbar navbar-expand-sm">
