--- a/projects/index.html
+++ b/projects/index.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body class="d-flex text-center text-bg-dark mb-auto">
+    <body class="d-flex text-center text-bg-success mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container mb-4">
                 <nav class="navbar navbar-expand-sm">
@@ -55,7 +55,7 @@
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/nibo2/" 
-                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold">
+                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
                                 </div>
@@ -70,7 +70,7 @@
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/nibo2/" 
-                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold">
+                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
                                 </div>
@@ -85,7 +85,7 @@
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/nibo2/" 
-                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold">
+                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
                                 </div>
