--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body class="d-flex text-center text-bg-dark mb-auto">
+    <body class="d-flex text-center text-bg-success mb-auto">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container">
                 <nav class="navbar navbar-expand-sm">
@@ -47,7 +47,7 @@
                         I need to format my Portfolio into compact readable format. Therefore i need to finish on <i>Projects</i> first.
                     </p>
                     <p>
-                        But you can find my CV <a href="https://danielbusse.github.io/cv.pdf">here</a>.
+                        But you can find my CV <a class="text-info" href="https://danielbusse.github.io/cv.pdf">here</a>.
                     </p>
                 </div>
             </main>
