added cv.pdf, updated projekt links

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,7 +54,7 @@
                                     Lane detection with a 3D camera in a Robotic Operating System with Open Computer Vision
                                 </p>
                                 <div>
-                                    <a href="https://danielbusse.github.io/projects/nibo2/" 
+                                    <a href="https://danielbusse.github.io/projects/b-thesis/" 
                                     class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
@@ -69,7 +69,7 @@
                                     This is a Project about the Nao humanoid robot and detection objects with a haartrainer
                                 </p>
                                 <div>
-                                    <a href="https://danielbusse.github.io/projects/nibo2/" 
+                                    <a href="https://danielbusse.github.io/projects/naolino/" 
                                     class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
