restructured nibo project, added placeholder sites for projects, improved project-cards in project-list

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,12 +42,18 @@
             </header>
             <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1>Portfolio comming soon....</h1>
+                    <h1>Portfolio is beeing edited right now....</h1>
                     <p class="lead">
-                        I need to format my Portfolio into compact readable format. Therefore i need to finish on <i>Projects</i> first.
+                        I need to reformat my Portfolio to be more compact and better readable. Check out my CV or Projects if you are interested!
                     </p>
                     <p>
-                        But you can find my CV <a class="text-info" href="https://danielbusse.github.io/cv.pdf">here</a>.
+                        You can find my CV <a class="text-info" href="https://danielbusse.github.io/cv.pdf">here</a> and also in german <a class="text-info" href="https://danielbusse.github.io/cv_ger.pdf">here</a>.
+                    </p>
+                    <p>
+                        Check out my <a class="text-info" href="https://www.linkedin.com/in/daniel-busse-a3bbb6146/">LinkedIn</a>
+                    </p>
+                    <p>
+                        Check out my <a class="text-info" href="https://github.com/danielbusse/">GitHub</a>
                     </p>
                 </div>
             </main>
