--- a/projects/index.html
+++ b/projects/index.html
@@ -42,13 +42,13 @@
             </header>
             <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1>Project specific sites comming soon....</h1>
-                    <p class="lead">I still have to put all my past projects into a small readable format.</p>
+                    <h1>Selected Projects</h1>
+                    <p class="lead">These are some projects i worked on in the past</p>
                     </p>
                     <div class="container col-md-6 w-75">
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
-                                <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">ROS, Lane Detection</strong>
+                                <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">ROS, Lane Detection, Image Recognition</strong>
                                 <h3 class="p-2">Bachelor Thesis</h3>
                                 <p class="card-text mb-4">
                                     Lane detection with a 3D camera in a Robotic Operating System with Open Computer Vision
@@ -64,9 +64,9 @@
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
                                 <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">Robotics, Object Detection</strong>
-                                <h3 class="p-2">NaoLino - Recognizing Objects</h3>
+                                <h3 class="p-2">NaoLino - Object detection with the NAO robot</h3>
                                 <p class="card-text mb-4">
-                                    This is a Project about the Nao humanoid robot and detection objects with a haartrainer
+                                    Detecting selected Objects with the NAO robot and pointing at them 
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/naolino/" 
@@ -79,12 +79,27 @@
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
                                 <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">Robotics, Image Recognition</strong>
-                                <h3 class="p-2">Nibo 2 - My First Robotics Project</h3>
+                                <h3 class="p-2">Ronaldo - Detecting and kicking a ball</h3>
                                 <p class="card-text mb-4">
-                                    This is a Project about the Nibo2 and image recognition with OpenCV
+                                    Detecting a red ball with a modified NIBO 2, aiming at the ball and kicking it with the robot
                                 </p>
                                 <div>
-                                    <a href="https://danielbusse.github.io/projects/nibo2/" 
+                                    <a href="https://danielbusse.github.io/projects/ronaldo/" 
+                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
+                                        Read More
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">Robotics, Navigation</strong>
+                                <h3 class="p-2">Parkourmeister - My First Robotics Project</h3>
+                                <p class="card-text mb-4">
+                                    Navigating a parcour (Labyrinth-like) and exiting it with a NIBO 2 Robot
+                                </p>
+                                <div>
+                                    <a href="https://danielbusse.github.io/projects/parkourmeister/" 
                                     class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
