--- a/projects/parkourmeister/index.html
+++ b/projects/parkourmeister/index.html
@@ -42,8 +42,8 @@
             </header>
             <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1>NaoLino</h1>
-                    <p class="lead">I still have to write text here :(</p>
+                    <h1>Parkourmeiser</h1>
+                    <p class="lead">I still need to write Text here :(</p>
                     </p>
                 </div>
             </main>
@@ -58,4 +58,9 @@
 </html>
 
 <!--
-featured on iCampus of my university: https://icampus.th-wildau.de/cms/roboticlab/studierendenprojekte (last checked: 2024)
+Im Rahmen von Einführung in die Programmiersprache C wurde ein Projekt zur Bewertung bis zum Ende des Semseters ausgegeben. 
+Ziel war es einen Nibo 2 Roboter ein Labyrinth traversieren zu lassen und zusätzlich ein Projekt nach Wahl umzusetzen.
+Mein Projektpartner und ich haben uns bei dem Wahlpflichtprojekt für eine Objekterkennung mittels traditioneller Bildverarbeitung entschieden.
+Dabei sollte der Roboter mittels einer Kamera einen roten Ball erkennen, anvisieren und schießen (gegen fahren). 
+
+
