--- a/projects/ronaldo/index.html
+++ b/projects/ronaldo/index.html
@@ -42,7 +42,7 @@
             </header>
             <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1>NaoLino</h1>
+                    <h1>Ronaldo is comming soon!! :0</h1>
                     <p class="lead">I still have to write text here :(</p>
                     </p>
                 </div>
