--- a/projects/b-thesis/index.html
+++ b/projects/b-thesis/index.html
@@ -42,7 +42,7 @@
             </header>
             <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1>NaoLino</h1>
+                    <h1>Bachelor Thesis</h1>
                     <p class="lead">I still have to write text here :(</p>
                     </p>
                 </div>
@@ -58,4 +58,4 @@
 </html>
 
 <!--
-featured on iCampus of my university: https://icampus.th-wildau.de/cms/roboticlab/studierendenprojekte (last checked: 2024)
+
