updated CV in english and german; updated links to CV

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,7 +47,7 @@
                         I need to reformat my Portfolio to be more compact and better readable. Check out my CV or Projects if you are interested!
                     </p>
                     <p>
-                        You can find my CV <a class="text-info" href="https://danielbusse.github.io/cv.pdf">here</a> and also in german <a class="text-info" href="https://danielbusse.github.io/cv_ger.pdf">here</a>.
+                        You can find my CV <a class="text-info" href="https://danielbusse.github.io/cv_eng.pdf">here</a> and also in german <a class="text-info" href="https://danielbusse.github.io/cv_ger.pdf">here</a>.
                     </p>
                     <p>
                         Check out my <a class="text-info" href="https://www.linkedin.com/in/daniel-busse-a3bbb6146/">LinkedIn</a>
