first edit of the parkourmeister project

--- a/projects/parkourmeister/index.html
+++ b/projects/parkourmeister/index.html
@@ -42,9 +42,21 @@
             </header>
             <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1>Parkourmeiser</h1>
-                    <p class="lead">I still need to write Text here :(</p>
+                    <h1>Parkourmeiser - This Page is currently edited</h1>
+                    <p class="lead">
+                        This project emerged out of the Software Engineering I course of my bachelor. This project has two parts, "Parkourmeister" and "Ronaldo". 
+                        Latter will not be covered here but can be found under <a href="https://danielbusse.github.io/projects/" class="text-info">projects</a>.
                     </p>
+                    <p>
+                        The Task was to develop an algorithm to traverse the NIBO 2 through a labyrinth-like parcour with deadends and very slim sections. The 
+                        Goal was to reach the exit, wich was an opening to an open area.
+                    </p>
+                    <p>
+                        To sense the environment, the NIBO 2 is equiped with multiple sensors as can be seen in the following image. It has 5 IR-Sensors in his 
+                        frontsection facing left, right, front and diagonally to the front and each side. There are also Floorsensors that sense, if there is a 
+                        floor beneath these sensors. Besides these there are also linesensors, with were not used in this project.
+                    </p>
+                    <img src="https://danielbusse.github.io/img/nibo_sensors.png" class="mx-auto d-block img-fluid" alt="Sensorlayout of the NIBO 2 robot">
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
@@ -55,12 +67,6 @@
             </footer>
         </div>
     </body>
-</html>
-
-<!--
-Im Rahmen von Einführung in die Programmiersprache C wurde ein Projekt zur Bewertung bis zum Ende des Semseters ausgegeben. 
-Ziel war es einen Nibo 2 Roboter ein Labyrinth traversieren zu lassen und zusätzlich ein Projekt nach Wahl umzusetzen.
-Mein Projektpartner und ich haben uns bei dem Wahlpflichtprojekt für eine Objekterkennung mittels traditioneller Bildverarbeitung entschieden.
-Dabei sollte der Roboter mittels einer Kamera einen roten Ball erkennen, anvisieren und schießen (gegen fahren). 
+</html> 
 
 
