added editing hint to projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -43,7 +43,8 @@
             <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
                     <h1>Selected Projects</h1>
-                    <p class="lead">These are some projects i worked on in the past</p>
+                    <p class="lead">These are some projects i worked on in the past.</p>
+                    <p class="text-warning">But i am currenly still writing the text for these project pages! :)</p>
                     </p>
                     <div class="container col-md-6 w-75">
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
