changed navbar brand to home link

--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,7 @@
             <header class="container mb-4">
                 <nav class="navbar navbar-expand-sm">
                     <div class="container-fluid">
-                        <h3 class="p-2">Daniel Busse</h3>
+                        <a class="p-2 fs-3 text-light text-decoration-none" href="https://danielbusse.github.io/">Daniel Busse</a>
                         <ul class="navbar-nav border rounded">
                             <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/">Home</a>
